k8s/apps/homer/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: homer
    app.kubernetes.io/part-of: homer
    ingress.thaum.xyz/probe: enabled
  name: homer
  namespace: homer
spec:
  ingressClassName: public
  rules:
    - host: ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: ankhmorpork-homer
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ankhmorpork.thaum.xyz
      secretName: homer-tls
